Alterações view de registro

--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -1,14 +1,5 @@
-﻿<header>
-    <a href="/Frontend/index.html">
-        <img src="media/logo1.png" width="100px">
-    </a>
-    <div class="login">
-        <span>Já tem uma conta?</span>
-        <a href="/" class="login-button">Faça login</a>
-    </div>
-</header>
-
-<main>
+﻿
+<main class="register-main">
     <section>
         <img class="mulher" src="media/refreshing.svg" width="40%" alt="mulher bebendo suquinho">
     </section>
@@ -44,7 +35,3 @@
     </section>
 
 </main>
-
-<footer>
-    <p>Copyright © NcDonald’s 2021</p>
-</footer>
