--- a/NcDonalds/Views/Account/Login.cshtml
+++ b/NcDonalds/Views/Account/Login.cshtml
@@ -1,13 +1,15 @@
-﻿@model RegisterViewModel
+﻿@model LoginViewModel
+
 <table>
     <tr>
-        <td><img src="~/images/registro1.jpg" alt="Registrar Usuário" class="center-block" /></td>
+        <td><img src="~/images/login1.jpg" alt="Fazer o Login" class="center-block" /></td>
         <td>
             <div class="row loginForm">
                 <div class="col-md-12">
-                    <h4>Registrar usuário</h4>
-                    <form asp-controller="Account" asp-action="Register" method="post" class="form-horizontal" role="form">
+                    <h4>Informe as credenciais do usuário</h4>
+                    <form asp-controller="Account" asp-action="Login" method="post" class="form-horizontal" role="form">
                         <hr />
+                        <input type="hidden" asp-for="ReturnUrl" />
                         <div class="form-group">
                             <label asp-for="UserName" class="col-md-2 control-label"></label>
                             <div class="col-md-12">
@@ -15,6 +17,7 @@
                                 <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
                         </div>
+
                         <div class="form-group">
                             <label asp-for="Password" class="col-md-2 control-label"></label>
                             <div class="col-md-12">
@@ -22,9 +25,9 @@
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="form-group pull-right formPullRightButton">
+                        <div class="form-group formPullRightButton">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" class="btn btn-success " value="Registrar" />
+                                <input type="submit" class="btn btn-success" value="Log in" />
                             </div>
                         </div>
                     </form>
