--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<section class="containerr">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="container">
+        <img src="~/media/logo1.png" alt="logo do site NcDonalds" id="imgpos" />
+        <img src="~/media/Group.png" alt="lanches do NcDonalds" id="imgposicionada" />
+    </div>
+    
+
+</section>
