--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -1,35 +1,33 @@
-﻿@model RegisterViewModel
-<table>
-    <tr>
-        <td><img src="~/images/registro1.jpg" alt="Registrar Usuário" class="center-block" /></td>
-        <td>
-            <div class="row loginForm">
-                <div class="col-md-12">
-                    <h4>Registrar usuário</h4>
-                    <form asp-controller="Account" asp-action="Register" method="post" class="form-horizontal" role="form">
-                        <hr />
-                        <div class="form-group">
-                            <label asp-for="UserName" class="col-md-2 control-label"></label>
-                            <div class="col-md-12">
-                                <input asp-for="UserName" class="form-control" />
-                                <span asp-validation-for="UserName" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Password" class="col-md-2 control-label"></label>
-                            <div class="col-md-12">
-                                <input asp-for="Password" class="form-control" />
-                                <span asp-validation-for="Password" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group pull-right formPullRightButton">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" class="btn btn-success " value="Registrar" />
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </td>
-    </tr>
-</table>
+﻿<section>
+    <img class="mulher" src="~/media/refreshing.svg" width="40%" alt="mulher bebendo suquinho">
+</section>
+
+<section class="inputs">
+
+    <div class="field">
+        <label for="nome">Nome</label>
+        <input id="nome" name="nome" type="text">
+    </div>
+
+    <div class="field">
+        <label for="telefone">Telefone</label>
+        <input id="telefone" name="telefone" type="tel">
+    </div>
+
+    <div class="field">
+        <label for="email">E-mail</label>
+        <input id="email" name="email" type="email">
+    </div>
+
+    <div class="field">
+        <label for="senha">Senha</label>
+        <input id="senha" name="senha" type="password">
+    </div>
+
+    <div class="field">
+        <label for="confirmaSenha">Confirme sua senha</label>
+        <input id="confirmaSenha" name="confirmaSenha" type="password">
+    </div>
+
+    <a href="/" class="botao-cadastrar">Cadastrar</a>
+</section>
