--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="~/css/Account/register.css" />
     <link rel="stylesheet" href="~/css/Account/login.css" />
 
-    <!-- Home css -->
-    <link rel="stylesheet" href="~/css/Home/index.css" />
+    <!-- Stylus -->
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
