--- a/NcDonalds/Views/_ViewImports.cshtml
+++ b/NcDonalds/Views/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @using NcDonalds.Models
 @using NcDonalds.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper NcDonalds.TagHelpers*, NcDonalds
+
