Implementação de Carrinho de Compras

--- a/NcDonalds/Views/Account/Login.cshtml
+++ b/NcDonalds/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
 <!-- Page content -->
 
 <section class="img-login">
-    <img class="burger" src="~/images/Hamburger-pana (1).svg" alt="burguer">
+    <img class="burger" src="/images/Hamburger-pana (1).svg" alt="burguer">
 </section>
 
 <form asp-controller="Account" asp-action="Login" method="post" role="form" class="inputs">
