--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -13,7 +13,7 @@
 @model RegisterViewModel
 <!-- page content -->
 <section>
-    <img class="img-mulher" src="~/images/refreshing.svg" alt="mulher bebendo suquinho">
+    <img class="img-mulher" src="/images/refreshing.svg" alt="mulher bebendo suquinho">
 </section>
 
 <form asp-controller="Account" asp-action="Register" method="post" class="inputs" role="form">
