Inclusão de rotas para filtro por categoria e área de admin

--- a/NcDonalds/Views/CarrinhoCompra/Index.cshtml
+++ b/NcDonalds/Views/CarrinhoCompra/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model CarrinhoCompraViewModel
 
+@{
+    ViewData["Title"] = "";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
 <div class="row checkoutForm">
 
     <img src="~/images/Full-Cart-icon.png" />
