Ajuste de implementação dos Layouts

--- a/NcDonalds/Views/Shared/Account/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/Account/_Layout.cshtml
@@ -12,8 +12,8 @@
 <body>
 
     <header class="container-header">
-        <a>
-            <img src="~/images/logo1.png" class="img-header">
+        <a asp-controller="Home" asp-action="Index">
+            <img src="/images/logo1.png" class="img-header">
         </a>
         <div class="login">
             @RenderSection("navMessage", required: true)
