--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
         <img src="~/media/Group.png" alt="lanches do NcDonalds" id="imgposicionada" />
     </div>
     
-
+    <p>Teste</p>
+   
 </section>
