Ajuste das telas Home e Contato

--- a/NcDonalds/Views/Shared/Account/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/Account/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <header class="container-header">
         <a asp-controller="Home" asp-action="Index">
-            <img src="/images/logo1.png" class="img-header">
+            <img src="/images/Logo.png" class="img-header">
         </a>
         <div class="login">
             @RenderSection("navMessage", required: true)
