--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -13,33 +13,38 @@
 
     <!-- Stylus -->
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/account.css" />
+    <link rel="stylesheet "href="~/css/contato.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header class="container-header">
-        <a asp-controller="Home" asp-action="Index">
-            <img src="/images/logo1.png" class="img-header">
-        </a>
-        <nav class="nav-principal">
-            <ul>
-                <li>
-                    <a asp-controller="Home" asp-action="Index">Ínicio</a>
-                </li>
-                <li>
-                    <a asp-controller="Home" asp-action="Contato">Contato</a>
-                </li>
-                <li>
-                    <a asp-controller="Lanche" asp-action="List">Cardápio</a>
-                </li>
-                <li>
-                    <a asp-controller="Account" asp-action="Login">Login</a>
-                </li>
-            </ul>
-        </nav>
+    <header>
+        <div class="container-header">
 
+            <a asp-controller="Home" asp-action="Index">
+                <img src="/images/Logo.png" class="img-header">
+            </a>
+            <nav class="nav-principal">
+                <ul>
+                    <li>
+                        <a asp-controller="Home" asp-action="Index">Ínicio</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Home" asp-action="Contato">Contato</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Lanche" asp-action="List">Cardápio</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Account" asp-action="Login">Login</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
     </header>
 
     <div class="">
