--- a/NcDonalds/Views/Home/Contato.cshtml
+++ b/NcDonalds/Views/Home/Contato.cshtml
@@ -1,63 +1,40 @@
-﻿<!DOCTYPE html>
-<html lang="pt-br">
+﻿
+@{ 
+    ViewData["Title"] = "Contato";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet " href="/NcDonalds/wwwroot/css/contato.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Contate-nos</title>
-</head>
+<div class="container-row container-contato">
 
-<body>
+    <section>
+        <img class="contato-img" src="/images/contato.svg" alt="dois atendentes">
+    </section>
 
-    <header>
-        <a href="Index.cshtml">
-            <img src="/NcDonalds/wwwroot/images/logo.png" width="100px">
-        </a>
+    <section class="redes">
+        <div class="titulo">
+            Queremos ouvir o que você tem a dizer!
+        </div>
 
-        <nav>
-            <a href="">Cardápio</a>
-            <a href="">Contato</a>
-            <a href="">Perfil</a>
-        </nav>
+        <div class="opcao">
+            <img src="/images/facebook.png" alt="facebook">
+            <a href="facebook.com/NcDonalds"> facebook.com/NcDonalds </a>
+        </div>
 
-    </header>
+        <div class="opcao">
+            <img src="/images/instagram.png" alt="instagram">
+            <a href="instagram.com/Ncdonalds"> instagram.com/NcDonalds </a>
+        </div>
 
-    <main>
-        <section>
-            <img class="contato" src="/NcDonalds/wwwroot/images/contato.svg" width="40%" alt="dois atendentes">
-        </section>
+        <div class="opcao">
+            <img src="/images/email.png" alt="email">
+            <a href="mailto:contato@ncdonalds.com">contato@ncdonalds.com</a>
+        </div>
 
-        <section class="redes">
-            <div class="titulo">
-                Queremos ouvir o que você tem a dizer!
-            </div>
+        <div class="opcao">
+            <img src="/images/phone.png" alt="telefone">
+            <a href="tel:+558140028922">+55 (81) 4002- 8922</a>
+        </div>
+    </section>
 
-            <div class="opcao">
-                <img src="/NcDonalds/wwwroot/images/facebook.png" alt="facebook">
-                <a href="facebook.com/NcDonalds"> facebook.com/NcDonalds </a>
-            </div>
+</div>
 
-            <div class="opcao">
-                <img src="/NcDonalds/wwwroot/images/instagram.png" alt="instagram">
-                <a href="instagram.com/Ncdonalds"> instagram.com/NcDonalds </a>
-            </div>
-
-            <div class="opcao">
-                <img src="/NcDonalds/wwwroot/images/email.png" alt="email">
-                <a href="mailto:contato@ncdonalds.com">contato@ncdonalds.com</a>
-            </div>
-
-            <div class="opcao">
-                <img src="/NcDonalds/wwwroot/images/phone.png" alt="telefone">
-                <a href="tel:+558140028922">+55 (81) 4002- 8922</a>
-            </div>
-        </section>
-
-    </main>
-
-</body>
-
-</html>
