--- a/NcDonalds/wwwroot/css/site.css
+++ b/NcDonalds/wwwroot/css/site.css
@@ -46,6 +46,17 @@ button {
     cursor: pointer;
 }
 
+.container-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    font-size: 1.3rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
 .nav-principal ul {
     display: flex;
     align-items: center;
@@ -55,10 +66,75 @@ button {
         margin-left: 25px;
     }
 
-        .nav-principal ul li a{
+        .nav-principal ul li a {
+            margin-right: 15px;
             font-family: 'Montserrat';
             text-decoration: none;
-            color: #FFFFFF;
+            color: var(--branco);
             font-size: 1.35rem;
+            transition: 0.3s;
         }
 
+            .nav-principal ul li a:hover {
+                color: #AAA;
+            }
+
+section .container {
+    width: 100%;
+}
+
+.content {
+    width: 100%;
+    height: 600px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url(/images/pexels-horizon-content-3738755.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+    .content h2, .content p {
+        color: white;
+    }
+
+    .content h2 {
+        font-size: 1.50rem;
+        margin-bottom: 30px
+    }
+
+    .content p {
+        font-size: 1.20rem;
+    }
+
+
+    .content .container {
+        width: 50%;
+        height: 100%;
+        align-items: flex-start;
+        margin: 0 0 0 50px;
+    }
+
+
+
+        .content .container .container-column {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 70%;
+            height: 100%;
+        }
+
+.img-header {
+    width: 120px;
+}
+
+
+footer {
+    padding: 20px;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+    margin-top: 20px;
+    font-size: 1.20rem;
+}
