--- a/NcDonalds/Views/Account/Login.cshtml
+++ b/NcDonalds/Views/Account/Login.cshtml
@@ -15,6 +15,10 @@
 
 <section class="img-login">
     <img class="burger" src="/images/Hamburger-pana (1).svg" alt="burguer">
+    <img class="burger" src="/images/Lanches/cheeseburguer-thumb.jpg" alt="burguer">
+    <img class="burger" src="/images/Lanches/cheeseburguer.jpg" alt="burguer">
+
+
 </section>
 
 <form asp-controller="Account" asp-action="Login" method="post" role="form" class="inputs">
