Implementação do ícone de cart para Carinho de Compra

--- a/NcDonalds/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NcDonalds/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NcDonalds
 @using NcDonalds.Models
-
+@using NcDonalds.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper LanchesMac.TagHelpers.* , LanchesMac
-@addTagHelper *, ReflectionIT.Mvc.Paging
+@addTagHelper NcDonalds.TagHelpers*, NcDonalds
+
