--- a/NcDonalds/Views/Lanche/List.cshtml
+++ b/NcDonalds/Views/Lanche/List.cshtml
@@ -5,6 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section bootstrap{
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+}
+
 <p>
     <h2> @Model.CategoriaAtual </h2>
 </p>
@@ -13,5 +19,5 @@
 @foreach (var lanche in Model.Lanches)
 {
     @await Html.PartialAsync("_LancheResumo", lanche);
-    
+
 }
