--- a/NcDonalds/wwwroot/css/lanche.css
+++ b/NcDonalds/wwwroot/css/lanche.css
@@ -11,8 +11,13 @@
     margin: 15px auto;
 }
 
+.content-lanche{
+    width: 70%;
+}
+
 .img-lanche {
     margin-right: 20px;
+    width: 30%;
 }
 
     .img-lanche img {
