--- a/NcDonalds/wwwroot/css/lanche.css
+++ b/NcDonalds/wwwroot/css/lanche.css
@@ -4,11 +4,12 @@
     align-items: center;
     justify-content: center;
     margin: 70px 0;
+    color: white;
 }
 
 .container-page {
-    width: 80%;
-    margin: 15px auto;
+    margin: 15px 50px;
+
 }
 
 .content-lanche{
@@ -16,46 +17,66 @@
 }
 
 .img-lanche {
-    margin-right: 20px;
-    width: 30%;
+    display: flex;
+    margin-right: 80px;
+
+
+  
 }
 
     .img-lanche img {
-        width: 300px;
-        height: 300px;
+
+        width: 250px;
+        height: auto;
+        border-radius: 20px;
     }
 
 .title a {
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Montserrat';
     color: white;
 }
 
-    .title a:hover {
-        font-size: 25px;
-        font-family: 'Montserrat';
-        color: gray;
-    }
 
 .descricao-curta {
-    font-size: 17px;
+    font-size: 25px;
+    font-weight: 300;
     color: white;
 }
 
-.preco{
-    font-size:20px;
-    color:green;
+.preco {
+    font-size: 25px;
+    font-weight: 300;
+    color: white;
 }
 
-.btn-carrinho{
-    background-color: yellow;
-    color: black;
-    padding:15px;
-    margin-left: 15px;
-    font-size: 10px;
+.btn-carrinho {
+    background-color: #F1B104;
+    color: #573240;
+    padding: 17px 24px;
+    font-size: 25px;
+    border-radius: 10px;
+    font-weight: 300;
+}
+.btn-carrinho:hover {
+    color: #573240;
+}
+.btn-carrinho:visited {
+    color: #573240;
 }
 
 .btn-detalhes {
     color: white;
     font-size: 10px;
+}
+.compra {
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+.info{
+    width: 100%;
+    height: 100%;
+
 }
