Alteração em Layout e Home page

--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -9,32 +9,28 @@
     <link rel="stylesheet" href="~/css/Account/register.css" />
     <link rel="stylesheet" href="~/css/Account/login.css" />
 
-    @RenderSection("bootstrap", false);
-
     <!-- Stylus -->
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet " href="~/css/contato.css">
     <link rel="stylesheet " href="~/css/lanche.css">
 
 
-
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    @RenderSection("bootstrap", false)
 
 </head>
 <body>
     <header>
         <div class="container-header">
-
-            <a asp-controller="Home" asp-action="Index">
-                <img src="/images/Logo.png" class="img-header">
-            </a>
             <nav class="nav-principal">
-                <ul>
+                <ul class="container-row">
                     <li>
-                        @await Component.InvokeAsync("CarrinhoCompraResumo")
+                        <a asp-controller="Home" asp-action="Index">
+                            <img src="/images/Logo.png" class="img-header">
+                        </a>
                     </li>
                     <li>
                         <a asp-controller="Home" asp-action="Index">Ínicio</a>
@@ -45,20 +41,25 @@
                     <li>
                         <a asp-controller="Lanche" asp-action="List">Cardápio</a>
                     </li>
-                    <li>
-                        @await Html.PartialAsync("_LoginPartial")
+                </ul>
+            </nav>
+
+            <nav class="nav-secundaria">
+                <ul class="container-row">
+                    <li class="carrinho-icon">
+                        @await Component.InvokeAsync("CarrinhoCompraResumo")
                     </li>
+
+                    @await Html.PartialAsync("_LoginPartial")
                 </ul>
             </nav>
 
         </div>
     </header>
 
-    <div class="">
-        <main role="" class="">
-            @RenderBody()
-        </main>
-    </div>
+    <main class="">
+        @RenderBody()
+    </main>
 
     <footer>
         <p>Copyright © NcDonald’s 2021</p>
