--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -1,16 +1,66 @@
-﻿<section class="container">
+﻿<section>
+
+    <div class="container-row">
+        <img src="~/images/Group.png" class="container-row img-home" />
+    </div>
 
 
-    <div class="content">
+    <div class="img-graund content">
 
-        <div class="container">
-            <div class="container-column">
-                <h2>Quem Somos</h2>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                </p>
+        <div class="container-content">
+
+            <div class="container-row">
+
+                <div class="img-home">
+                    <img src="/images/cliente.png" />
+                </div>
+
+                <div class="container-column content-home">
+                    <h3 class="title"> Quem Somos </h3>
+
+                    <p class="text">
+
+                        Lorem Ipsum is simply dummy text of
+                        the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's
+                        standard dummy text ever since the
+                        1500s, when an unknown printer took
+                        a galley of type and scrambled it to
+                        make a type specimen book.
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
-   
+
+    <div class="content">
+        <div class="container-content">
+
+            <div class="container-row">
+
+                <div class="container-column content-home">
+                    <h3 class="title"> Quem Somos </h3>
+
+                    <p class="text">
+
+                        Lorem Ipsum is simply dummy text of
+                        the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's
+                        standard dummy text ever since the
+                        1500s, when an unknown printer took
+                        a galley of type and scrambled it to
+                        make a type specimen book.
+                    </p>
+                </div>
+
+                <div class="img-home">
+                    <img src="/images/cliente.png" />
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
 </section>
