--- a/NcDonalds/Views/Shared/_LoginPartial.cshtml
+++ b/NcDonalds/Views/Shared/_LoginPartial.cshtml
@@ -5,21 +5,22 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm"
-          method="post" class="navbar-left">
-        <ul class="nav navbar-nav navbar-left">
-            <a href="javascript:document.getElementById('logoutForm').submit()" style="color:white">&nbsp;Log off&nbsp;&nbsp;&nbsp;</a>
-        </ul>
-    </form>
+
+
+    <li class="header-profile">
+        <a asp-controller="Account" asp-action="Logout">
+            <img class="img-profile" src="~/images/perfil.jpg" />
+        </a>
+    </li>
+
 }
 else
 {
-    <ul class="nav navbar-nav navbar-left">
-        <li>
-            <a class="nav-link text-light" asp-controller="Account" asp-action="Login" style="color:white">&nbsp; Log in&nbsp; </a>
-        </li>
-        <li>
-            <a class="nav-link text-light" asp-controller="Account" asp-action="Register" style="color:white">&nbsp;Registro&nbsp;&nbsp;&nbsp; </a>
-        </li>
-    </ul>
+    <li>
+        <a class="nav-link text-light" asp-controller="Account" asp-action="Login" style="color:white">Já Tem Registro?</a>
+    </li>
+
+    <li>
+        <a class="login-button" asp-controller="Account" asp-action="Login">Entrar</a>
+    </li>
 }
