Ajuste em Login e Register

--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
 }
 
 <!-- page content -->
-<section>
+<section class="section-container">
     <img class="img-mulher" src="/images/refreshing.svg" alt="mulher bebendo suquinho">
 </section>
 
