--- a/NcDonalds/Views/Account/Login.cshtml
+++ b/NcDonalds/Views/Account/Login.cshtml
@@ -13,11 +13,8 @@
 
 <!-- Page content -->
 
-<section class="img-login">
+<section class="img-login section-container">
     <img class="burger" src="/images/Hamburger-pana (1).svg" alt="burguer">
-   
-
-
 </section>
 
 <form asp-controller="Account" asp-action="Login" method="post" role="form" class="inputs">
