--- a/NcDonalds/wwwroot/css/lanche.css
+++ b/NcDonalds/wwwroot/css/lanche.css
@@ -8,8 +8,8 @@
 }
 
 .container-page {
-    margin: 15px 50px;
-
+    margin: 20px auto;
+    width: 80%;
 }
 
 .content-lanche{
@@ -54,7 +54,7 @@
     background-color: #F1B104;
     color: #573240;
     padding: 10px 12px;
-    font-size: 22px;
+    font-size: 21px;
     border-radius: 10px;
     font-weight: 300;
 }
